# revit-plugin-framework-py

./: .gitignore  FOR_AI.md  README.md  deploy.py  new_plugin.bat  new_plugin.ps1  new_plugin.py  pyproject.toml
examples/hello_world/: bundle.yaml  plugin_logic.py  plugin_ui.py  script.py
template/: App.cs  Command.cs  PluginName.addin  PluginName.csproj  PythonRunner.cs  build_and_deploy.bat  build_and_deploy.ps1  bundle.yaml  plugin_logic.py  plugin_ui.py  script.py
