[project]
name = "revit-plugin-framework-py"
version = "0.1.0"
description = "pyRevitを使ったRevitプラグイン高速開発フレームワーク（AI支援対応）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
new-plugin = "revit_plugin_framework.new_plugin:main"
deploy = "revit_plugin_framework.deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["revit_plugin_framework"]
